// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPayload getPayload :: Pus05 pusService: 5 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 2,
  "groundDate": 1518791878584,
  "payload": Object {
    "apidName": "apidName4",
    "lastUpdateModeApid": 1,
    "lastUpdateTimeApid": "2018-02-16T14:37:58.584",
    "serviceApid": 2,
    "status": 200,
    "uniqueId": "2",
  },
}
`;

exports[`getPayload getPayload :: Pus05 pusService: 5 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 2,
  "groundDate": 1518791878584,
  "payload": Object {
    "apidName": "apidName3",
    "lastUpdateModeApid": 3,
    "lastUpdateTimeApid": "2018-02-16T14:37:58.584",
    "serviceApid": Array [
      2,
      4,
    ],
    "status": 200,
    "uniqueId": "1",
  },
}
`;

exports[`getPayload getPayload :: Pus05 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: Pus11 pusService: 11 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 3,
  "groundDate": 1518791878584,
  "payload": Object {
    "commandBinaryProfile": "572155a3cc79f572155a3cc79f572155a3cc79f572155a3cc79f",
    "commandGroundStatus": "6",
    "commandName": "Command1",
    "commandStatus": 200,
    "currentExecutionTime": "2018-02-16T14:37:58.584",
    "initialExecutionTime": "2018-02-16T14:37:58.584",
    "lastUpdateModeBinProf": 1,
    "lastUpdateModeCommandId": 3,
    "lastUpdateModeCurrentExecTime": 1,
    "lastUpdateModeGroundStatus": 3,
    "lastUpdateModeInitialExecTime": 1,
    "lastUpdateModeStatus": 1,
    "lastUpdateModeTotalTimeShiftOffset": 1,
    "lastUpdateTimeBinProf": "2018-02-16T14:37:58.584",
    "lastUpdateTimeCommandId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeCurrentExecTime": "2018-02-16T14:37:58.584",
    "lastUpdateTimeGroundStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeInitialExecTime": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeTotalTimeShiftOffset": "2018-02-16T14:37:58.584",
    "pus011CommandParameters": Array [
      Object {
        "lastUpdateMode": 3,
        "lastUpdateTime": "2018-02-16T14:37:58.584",
      },
      Object {
        "lastUpdateMode": 3,
        "lastUpdateTime": "2018-02-16T14:37:58.584",
      },
    ],
    "pus011TimeShift": Array [
      Object {
        "applicationTime": "2018-02-16T14:37:58.584",
        "lastUpdateMode": 1,
        "lastUpdateTime": "2018-02-16T14:37:58.584",
      },
      Object {
        "applicationTime": "2018-02-16T14:37:58.584",
        "lastUpdateMode": 2,
        "lastUpdateTime": "2018-02-16T14:37:58.584",
      },
    ],
    "serviceApid": 2,
    "uniqueId": "2",
  },
}
`;

exports[`getPayload getPayload :: Pus11 pusService: 11 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 5,
  "groundDate": 1518791878584,
  "payload": Object {
    "executionTimeFirstTc": "2018-02-16T14:37:58.584",
    "lastUpdateModeExecTimeFirstTc": 3,
    "lastUpdateModeStatus": 1,
    "lastUpdateModeSubScheduleId": 1,
    "lastUpdateTimeExecTimeFirstTc": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeSubscheduleId": "2018-02-16T14:37:58.584",
    "serviceApid": Array [
      2,
      4,
    ],
    "ssIdLabel": "ssid2",
    "status": 200,
    "uniqueId": "1",
  },
}
`;

exports[`getPayload getPayload :: Pus11 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: Pus12 pusService: 12 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 7,
  "groundDate": 1518791878584,
  "payload": Object {
    "checkType": "2",
    "isMonitoringIntervalSet": true,
    "isRepetitionNumberSet": false,
    "lastUpdateModeCheckType": 1,
    "lastUpdateModeMonId": 1,
    "lastUpdateModeMonInterval": 1,
    "lastUpdateModeMonStatus": 3,
    "lastUpdateModeParamId": 2,
    "lastUpdateModeProtectionStatus": 1,
    "lastUpdateModeRepetition": 2,
    "lastUpdateModeValParamExpectValue": 3,
    "lastUpdateModeValParamId": 3,
    "lastUpdateModeValParamMask": 3,
    "lastUpdateTimeCheckType": "2018-02-16T14:37:58.584",
    "lastUpdateTimeMonId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeMonInterval": "2018-02-16T14:37:58.584",
    "lastUpdateTimeMonStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeParamId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeProtectionStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeRepetition": "2018-02-16T14:37:58.584",
    "lastUpdateTimeValParamExpectValue": "2018-02-16T14:37:58.584",
    "lastUpdateTimeValParamId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeValParamMask": "2018-02-16T14:37:58.584",
    "monitoringStatus": 1,
    "pus012MonitoringCheckPropertiesExpected": Object {
      "actionStatus": 200,
      "lastUpdateModeActionStatus": 2,
      "lastUpdateModeMask": 3,
      "lastUpdateModeRid": 1,
      "lastUpdateModeRidStatus": 2,
      "lastUpdateModeValue": 3,
      "lastUpdateTimeActionStatus": "2018-02-16T14:37:58.584",
      "lastUpdateTimeMask": "2018-02-16T14:37:58.584",
      "lastUpdateTimeRid": "2018-02-16T14:37:58.584",
      "lastUpdateTimeRidStatus": "2018-02-16T14:37:58.584",
      "lastUpdateTimeValue": "2018-02-16T14:37:58.584",
      "ridStatus": 2,
    },
    "pus012MonitoringCheckPropertiesHigh": Object {
      "actionStatus": 1,
      "lastUpdateModeActionStatus": 3,
      "lastUpdateModeMask": 3,
      "lastUpdateModeRid": 3,
      "lastUpdateModeRidStatus": 1,
      "lastUpdateModeValue": 1,
      "lastUpdateTimeActionStatus": "2018-02-16T14:37:58.584",
      "lastUpdateTimeMask": "2018-02-16T14:37:58.584",
      "lastUpdateTimeRid": "2018-02-16T14:37:58.584",
      "lastUpdateTimeRidStatus": "2018-02-16T14:37:58.584",
      "lastUpdateTimeValue": "2018-02-16T14:37:58.584",
      "ridStatus": 0,
    },
    "pus012MonitoringCheckPropertiesLow": Object {
      "actionStatus": 1,
      "lastUpdateModeActionStatus": 1,
      "lastUpdateModeMask": 1,
      "lastUpdateModeRid": 3,
      "lastUpdateModeRidStatus": 3,
      "lastUpdateModeValue": 1,
      "lastUpdateTimeActionStatus": "2018-02-16T14:37:58.584",
      "lastUpdateTimeMask": "2018-02-16T14:37:58.584",
      "lastUpdateTimeRid": "2018-02-16T14:37:58.584",
      "lastUpdateTimeRidStatus": "2018-02-16T14:37:58.584",
      "lastUpdateTimeValue": "2018-02-16T14:37:58.584",
      "ridStatus": 1,
    },
    "serviceApid": 2,
  },
}
`;

exports[`getPayload getPayload :: Pus12 pusService: 12 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 7,
  "groundDate": 1518791878584,
  "payload": Object {
    "checkType": "1",
    "isMonitoringIntervalSet": true,
    "isRepetitionNumberSet": true,
    "lastUpdateModeCheckType": 2,
    "lastUpdateModeMonId": 3,
    "lastUpdateModeMonInterval": 1,
    "lastUpdateModeMonStatus": 1,
    "lastUpdateModeParamId": 1,
    "lastUpdateModeProtectionStatus": 3,
    "lastUpdateModeRepetition": 3,
    "lastUpdateModeValParamExpectValue": 3,
    "lastUpdateModeValParamId": 3,
    "lastUpdateModeValParamMask": 2,
    "lastUpdateTimeCheckType": "2018-02-16T14:37:58.584",
    "lastUpdateTimeMonId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeMonInterval": "2018-02-16T14:37:58.584",
    "lastUpdateTimeMonStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeParamId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeProtectionStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeRepetition": "2018-02-16T14:37:58.584",
    "lastUpdateTimeValParamExpectValue": "2018-02-16T14:37:58.584",
    "lastUpdateTimeValParamId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeValParamMask": "2018-02-16T14:37:58.584",
    "monitoringStatus": 1,
    "pus012MonitoringCheckPropertiesExpected": Object {
      "actionStatus": 2,
      "lastUpdateModeActionStatus": 1,
      "lastUpdateModeMask": 1,
      "lastUpdateModeRid": 3,
      "lastUpdateModeRidStatus": 2,
      "lastUpdateModeValue": 3,
      "lastUpdateTimeActionStatus": "2018-02-16T14:37:58.584",
      "lastUpdateTimeMask": "2018-02-16T14:37:58.584",
      "lastUpdateTimeRid": "2018-02-16T14:37:58.584",
      "lastUpdateTimeRidStatus": "2018-02-16T14:37:58.584",
      "lastUpdateTimeValue": "2018-02-16T14:37:58.584",
      "ridStatus": 0,
    },
    "pus012MonitoringCheckPropertiesHigh": Object {
      "actionStatus": 1,
      "lastUpdateModeActionStatus": 3,
      "lastUpdateModeMask": 1,
      "lastUpdateModeRid": 1,
      "lastUpdateModeRidStatus": 3,
      "lastUpdateModeValue": 2,
      "lastUpdateTimeActionStatus": "2018-02-16T14:37:58.584",
      "lastUpdateTimeMask": "2018-02-16T14:37:58.584",
      "lastUpdateTimeRid": "2018-02-16T14:37:58.584",
      "lastUpdateTimeRidStatus": "2018-02-16T14:37:58.584",
      "lastUpdateTimeValue": "2018-02-16T14:37:58.584",
      "ridStatus": 200,
    },
    "pus012MonitoringCheckPropertiesLow": Object {
      "actionStatus": 1,
      "lastUpdateModeActionStatus": 1,
      "lastUpdateModeMask": 2,
      "lastUpdateModeRid": 2,
      "lastUpdateModeRidStatus": 2,
      "lastUpdateModeValue": 3,
      "lastUpdateTimeActionStatus": "2018-02-16T14:37:58.584",
      "lastUpdateTimeMask": "2018-02-16T14:37:58.584",
      "lastUpdateTimeRid": "2018-02-16T14:37:58.584",
      "lastUpdateTimeRidStatus": "2018-02-16T14:37:58.584",
      "lastUpdateTimeValue": "2018-02-16T14:37:58.584",
      "ridStatus": 0,
    },
    "serviceApid": Array [
      2,
      4,
    ],
  },
}
`;

exports[`getPayload getPayload :: Pus12 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: Pus13 pusService: 13 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 10,
  "groundDate": 1518791878584,
  "payload": Object {
    "lastUpdateModeEndTime": 3,
    "lastUpdateModeFailureCode": 2,
    "lastUpdateModeFileChecksum": 2,
    "lastUpdateModeLduId": 1,
    "lastUpdateModePercent": 1,
    "lastUpdateModeRemainSize": 3,
    "lastUpdateModeSize": 2,
    "lastUpdateModeStartTime": 1,
    "lastUpdateModeStatus": 3,
    "lastUpdateTimeEndTime": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFailureCode": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFileChecksum": "2018-02-16T14:37:58.584",
    "lastUpdateTimeLduId": "2018-02-16T14:37:58.584",
    "lastUpdateTimePercent": "2018-02-16T14:37:58.584",
    "lastUpdateTimeRemainSize": "2018-02-16T14:37:58.584",
    "lastUpdateTimeSize": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStartTime": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStatus": "2018-02-16T14:37:58.584",
    "pus013LdtPart": Array [
      Object {
        "status": "3",
      },
      Object {
        "status": "1",
      },
    ],
    "serviceApid": 2,
    "status": "6",
    "transferType": 1,
  },
}
`;

exports[`getPayload getPayload :: Pus13 pusService: 13 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 8,
  "groundDate": 1518791878584,
  "payload": Object {
    "lastUpdateModeEndTime": 1,
    "lastUpdateModeFailureCode": 3,
    "lastUpdateModeFileChecksum": 2,
    "lastUpdateModeLduId": 1,
    "lastUpdateModePercent": 2,
    "lastUpdateModeRemainSize": 3,
    "lastUpdateModeSize": 3,
    "lastUpdateModeStartTime": 2,
    "lastUpdateModeStatus": 2,
    "lastUpdateTimeEndTime": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFailureCode": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFileChecksum": "2018-02-16T14:37:58.584",
    "lastUpdateTimeLduId": "2018-02-16T14:37:58.584",
    "lastUpdateTimePercent": "2018-02-16T14:37:58.584",
    "lastUpdateTimeRemainSize": "2018-02-16T14:37:58.584",
    "lastUpdateTimeSize": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStartTime": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStatus": "2018-02-16T14:37:58.584",
    "pus013LdtPart": Array [
      Object {
        "status": "2",
      },
      Object {
        "status": "2",
      },
    ],
    "serviceApid": Array [
      2,
      4,
    ],
    "status": "7",
    "transferType": 1,
  },
}
`;

exports[`getPayload getPayload :: Pus13 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: Pus14 pusService: 14 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 11,
  "groundDate": 1518791878584,
  "payload": Object {
    "forwardingStatusRidSid": 1,
    "forwardingStatusTypeSubtype": 1,
    "lastUpdateModeFwdStatusTypeRidSid": 2,
    "lastUpdateModeFwdStatusTypeSubtype": 3,
    "lastUpdateModeRid": 3,
    "lastUpdateModeSid": 3,
    "lastUpdateModeSubSamplingRatio": 1,
    "lastUpdateModeTypeSubType": 3,
    "lastUpdateTimeFwdStatusTypeRidSid": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFwdStatusTypeSubtype": "2018-02-16T14:37:58.584",
    "lastUpdateTimeRid": "2018-02-16T14:37:58.584",
    "lastUpdateTimeSid": "2018-02-16T14:37:58.584",
    "lastUpdateTimeSubSamplingRatio": "2018-02-16T14:37:58.584",
    "lastUpdateTimeTypeSubType": "2018-02-16T14:37:58.584",
    "serviceApid": 2,
    "status": 1,
  },
}
`;

exports[`getPayload getPayload :: Pus14 pusService: 14 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 11,
  "groundDate": 1518791878584,
  "payload": Object {
    "forwardingStatusRidSid": 2,
    "forwardingStatusTypeSubtype": 2,
    "lastUpdateModeFwdStatusTypeRidSid": 1,
    "lastUpdateModeFwdStatusTypeSubtype": 3,
    "lastUpdateModeRid": 3,
    "lastUpdateModeSid": 3,
    "lastUpdateModeSubSamplingRatio": 1,
    "lastUpdateModeTypeSubType": 3,
    "lastUpdateTimeFwdStatusTypeRidSid": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFwdStatusTypeSubtype": "2018-02-16T14:37:58.584",
    "lastUpdateTimeRid": "2018-02-16T14:37:58.584",
    "lastUpdateTimeSid": "2018-02-16T14:37:58.584",
    "lastUpdateTimeSubSamplingRatio": "2018-02-16T14:37:58.584",
    "lastUpdateTimeTypeSubType": "2018-02-16T14:37:58.584",
    "serviceApid": Array [
      2,
      4,
    ],
    "status": 200,
  },
}
`;

exports[`getPayload getPayload :: Pus14 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: Pus15 pusService: 15 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 14,
  "groundDate": 1518791878584,
  "payload": Object {
    "downlinkStatus": 1,
    "lastUpdateModeDownlinkStatus": 1,
    "lastUpdateModeStoreId": 2,
    "lastUpdateModeStoreStatus": 3,
    "lastUpdateModeStoreType": 2,
    "lastUpdateTimeDownlinkStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStoreId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStoreStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStoreType": "2018-02-16T14:37:58.584",
    "pus015Packet": Array [
      Object {
        "isSubsamplingRatioSet": true,
        "lastUpdateModePacketId": 1,
        "lastUpdateModeSubSamplingRatio": 2,
        "lastUpdateTimePacketId": "2018-02-16T14:37:58.584",
        "lastUpdateTimeSubSamplingRatio": "2018-02-16T14:37:58.584",
        "serviceApid": 2,
      },
      Object {
        "isSubsamplingRatioSet": false,
        "lastUpdateModePacketId": 1,
        "lastUpdateModeSubSamplingRatio": 1,
        "lastUpdateTimePacketId": "2018-02-16T14:37:58.584",
        "lastUpdateTimeSubSamplingRatio": "2018-02-16T14:37:58.584",
        "serviceApid": 2,
      },
    ],
    "serviceApid": 2,
    "storeStatus": 0,
  },
}
`;

exports[`getPayload getPayload :: Pus15 pusService: 15 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 14,
  "groundDate": 1518791878584,
  "payload": Object {
    "downlinkStatus": 0,
    "lastUpdateModeDownlinkStatus": 3,
    "lastUpdateModeStoreId": 3,
    "lastUpdateModeStoreStatus": 1,
    "lastUpdateModeStoreType": 2,
    "lastUpdateTimeDownlinkStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStoreId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStoreStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStoreType": "2018-02-16T14:37:58.584",
    "pus015Packet": Array [
      Object {
        "isSubsamplingRatioSet": true,
        "lastUpdateModePacketId": 2,
        "lastUpdateModeSubSamplingRatio": 2,
        "lastUpdateTimePacketId": "2018-02-16T14:37:58.584",
        "lastUpdateTimeSubSamplingRatio": "2018-02-16T14:37:58.584",
        "serviceApid": Array [
          2,
          4,
        ],
      },
      Object {
        "isSubsamplingRatioSet": false,
        "lastUpdateModePacketId": 2,
        "lastUpdateModeSubSamplingRatio": 3,
        "lastUpdateTimePacketId": "2018-02-16T14:37:58.584",
        "lastUpdateTimeSubSamplingRatio": "2018-02-16T14:37:58.584",
        "serviceApid": Array [
          2,
          4,
        ],
      },
    ],
    "serviceApid": Array [
      2,
      4,
    ],
    "storeStatus": 1,
  },
}
`;

exports[`getPayload getPayload :: Pus15 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: Pus18 pusService: 18 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 16,
  "groundDate": 1518791878584,
  "payload": Object {
    "lastUpdateModeObcpId": 3,
    "lastUpdateModeObsLevel": 3,
    "lastUpdateModePartitionId": 3,
    "lastUpdateModePriority": 1,
    "lastUpdateModeStatus": 1,
    "lastUpdateModeStepId": 1,
    "lastUpdateTimeObcpId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeObsLevel": "2018-02-16T14:37:58.584",
    "lastUpdateTimePartitionId": "2018-02-16T14:37:58.584",
    "lastUpdateTimePriority": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStepId": "2018-02-16T14:37:58.584",
    "serviceApid": 2,
    "status": 200,
  },
}
`;

exports[`getPayload getPayload :: Pus18 pusService: 18 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 16,
  "groundDate": 1518791878584,
  "payload": Object {
    "lastUpdateModeObcpId": 2,
    "lastUpdateModeObsLevel": 1,
    "lastUpdateModePartitionId": 3,
    "lastUpdateModePriority": 3,
    "lastUpdateModeStatus": 2,
    "lastUpdateModeStepId": 2,
    "lastUpdateTimeObcpId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeObsLevel": "2018-02-16T14:37:58.584",
    "lastUpdateTimePartitionId": "2018-02-16T14:37:58.584",
    "lastUpdateTimePriority": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStepId": "2018-02-16T14:37:58.584",
    "serviceApid": Array [
      2,
      4,
    ],
    "status": 1,
  },
}
`;

exports[`getPayload getPayload :: Pus18 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: Pus19 pusService: 19 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 18,
  "groundDate": 1518791878584,
  "payload": Object {
    "lastUpdateModeServiceStatus": 2,
    "lastUpdateTimeServiceStatus": "2018-02-16T14:37:58.584",
    "pus19EventAction": Array [
      Object {
        "actionStatus": 1,
        "actionTcPacket": "759f32356a729759f32356a729759f32356a729759f32356a729",
        "lastUpdateModeActionStatus": 1,
        "lastUpdateModeActionTc": 3,
        "lastUpdateModeEventActionRid": 2,
        "lastUpdateTimeActionStatus": "2018-02-16T14:37:58.584",
        "lastUpdateTimeActionTc": "2018-02-16T14:37:58.584",
        "lastUpdateTimeEventActionRid": "2018-02-16T14:37:58.584",
      },
      Object {
        "actionStatus": 1,
        "actionTcPacket": "759f32356a729759f32356a729759f32356a729759f32356a729",
        "lastUpdateModeActionStatus": 3,
        "lastUpdateModeActionTc": 3,
        "lastUpdateModeEventActionRid": 1,
        "lastUpdateTimeActionStatus": "2018-02-16T14:37:58.584",
        "lastUpdateTimeActionTc": "2018-02-16T14:37:58.584",
        "lastUpdateTimeEventActionRid": "2018-02-16T14:37:58.584",
      },
    ],
    "serviceStatus": 2,
  },
}
`;

exports[`getPayload getPayload :: Pus19 pusService: 19 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 17,
  "groundDate": 1518791878584,
  "payload": Object {
    "actionStatus": 1,
    "actionTcPacket": "73cb4ed2f564473cb4ed2f564473cb4ed2f564473cb4ed2f5644",
    "lastUpdateModeActionStatus": 3,
    "lastUpdateModeActionTc": 1,
    "lastUpdateModeEventActionRid": 1,
    "lastUpdateTimeActionStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeActionTc": "2018-02-16T14:37:58.584",
    "lastUpdateTimeEventActionRid": "2018-02-16T14:37:58.584",
  },
}
`;

exports[`getPayload getPayload :: Pus19 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: Pus140 pusService: 140 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 20,
  "groundDate": 1518791878584,
  "payload": Object {
    "lastUpdateModeCurrentValue": 2,
    "lastUpdateModeParamId": 3,
    "lastUpdateTimeCurrentValue": "2018-02-16T14:37:58.584",
    "lastUpdateTimeParamId": "2018-02-16T14:37:58.584",
    "serviceApid": 2,
  },
}
`;

exports[`getPayload getPayload :: Pus140 pusService: 140 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 20,
  "groundDate": 1518791878584,
  "payload": Object {
    "lastUpdateModeCurrentValue": 1,
    "lastUpdateModeParamId": 2,
    "lastUpdateTimeCurrentValue": "2018-02-16T14:37:58.584",
    "lastUpdateTimeParamId": "2018-02-16T14:37:58.584",
    "serviceApid": Array [
      2,
      4,
    ],
  },
}
`;

exports[`getPayload getPayload :: Pus140 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: Pus142 pusService: 142 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 21,
  "groundDate": 1518791878584,
  "payload": Object {
    "actionStatus": 0,
    "checkingStatus": "2",
    "lastUpdateModeActionStatus": 3,
    "lastUpdateModeCheckingStatus": 3,
    "lastUpdateModeFMonId": 2,
    "lastUpdateModeProtectionStatus": 1,
    "lastUpdateModeRid": 2,
    "lastUpdateModeRidStatus": 1,
    "lastUpdateModeStatus": 3,
    "lastUpdateModeValidParamExpectedValue": 2,
    "lastUpdateModeValidParamId": 1,
    "lastUpdateModeValidParamMask": 3,
    "lastUpdateTimeActionStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeCheckingStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFMonId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeProtectionStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeRid": "2018-02-16T14:37:58.584",
    "lastUpdateTimeRidStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeValidParamExpectedValue": "2018-02-16T14:37:58.584",
    "lastUpdateTimeValidParamId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeValidParamMask": "2018-02-16T14:37:58.584",
    "pus142ParameterMonitoringDefinition": Array [
      Object {
        "lastUpdateModeId": 3,
        "lastUpdateTimeId": "2018-02-16T14:37:58.584",
        "serviceApid": 2,
      },
      Object {
        "lastUpdateModeId": 3,
        "lastUpdateTimeId": "2018-02-16T14:37:58.584",
        "serviceApid": 2,
      },
    ],
    "ridStatus": 200,
    "serviceApid": 2,
    "status": 0,
  },
}
`;

exports[`getPayload getPayload :: Pus142 pusService: 142 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 21,
  "groundDate": 1518791878584,
  "payload": Object {
    "actionStatus": 0,
    "checkingStatus": "1",
    "lastUpdateModeActionStatus": 2,
    "lastUpdateModeCheckingStatus": 2,
    "lastUpdateModeFMonId": 2,
    "lastUpdateModeProtectionStatus": 3,
    "lastUpdateModeRid": 3,
    "lastUpdateModeRidStatus": 3,
    "lastUpdateModeStatus": 2,
    "lastUpdateModeValidParamExpectedValue": 2,
    "lastUpdateModeValidParamId": 2,
    "lastUpdateModeValidParamMask": 2,
    "lastUpdateTimeActionStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeCheckingStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFMonId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeProtectionStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeRid": "2018-02-16T14:37:58.584",
    "lastUpdateTimeRidStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeValidParamExpectedValue": "2018-02-16T14:37:58.584",
    "lastUpdateTimeValidParamId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeValidParamMask": "2018-02-16T14:37:58.584",
    "pus142ParameterMonitoringDefinition": Array [
      Object {
        "lastUpdateModeId": 3,
        "lastUpdateTimeId": "2018-02-16T14:37:58.584",
        "serviceApid": Array [
          2,
          4,
        ],
      },
      Object {
        "lastUpdateModeId": 1,
        "lastUpdateTimeId": "2018-02-16T14:37:58.584",
        "serviceApid": Array [
          2,
          4,
        ],
      },
    ],
    "ridStatus": 2,
    "serviceApid": Array [
      2,
      4,
    ],
    "status": 1,
  },
}
`;

exports[`getPayload getPayload :: Pus142 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: Pus144 pusService: 144 serviceApid: 2 should be true 1`] = `
Object {
  "dataType": 24,
  "groundDate": 1518791878584,
  "payload": Object {
    "fileMode": "2",
    "fileProtectionStatus": "2",
    "isFileSizeSet": true,
    "lastUpdateModeComputedChecksum": 2,
    "lastUpdateModeFileAddress": 3,
    "lastUpdateModeFileCreationTime": 3,
    "lastUpdateModeFileMode": 2,
    "lastUpdateModeFileProtectionStatus": 2,
    "lastUpdateModeFileSize": 1,
    "lastUpdateModeFileType": 2,
    "lastUpdateModeOnBoardFileId": 1,
    "lastUpdateModeUploadedChecksum": 2,
    "lastUpdateTimeComputedChecksum": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFileAddress": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFileCreationTime": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFileMode": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFileProtectionStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFileSize": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFileType": "2018-02-16T14:37:58.584",
    "lastUpdateTimeOnBoardFileId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeUploadedChecksum": "2018-02-16T14:37:58.584",
    "serviceApid": 2,
  },
}
`;

exports[`getPayload getPayload :: Pus144 pusService: 144 serviceApid: 2,4 should be true 1`] = `
Object {
  "dataType": 24,
  "groundDate": 1518791878584,
  "payload": Object {
    "fileMode": "2",
    "fileProtectionStatus": "1",
    "isFileSizeSet": true,
    "lastUpdateModeComputedChecksum": 1,
    "lastUpdateModeFileAddress": 1,
    "lastUpdateModeFileCreationTime": 3,
    "lastUpdateModeFileMode": 2,
    "lastUpdateModeFileProtectionStatus": 3,
    "lastUpdateModeFileSize": 3,
    "lastUpdateModeFileType": 3,
    "lastUpdateModeOnBoardFileId": 2,
    "lastUpdateModeUploadedChecksum": 1,
    "lastUpdateTimeComputedChecksum": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFileAddress": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFileCreationTime": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFileMode": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFileProtectionStatus": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFileSize": "2018-02-16T14:37:58.584",
    "lastUpdateTimeFileType": "2018-02-16T14:37:58.584",
    "lastUpdateTimeOnBoardFileId": "2018-02-16T14:37:58.584",
    "lastUpdateTimeUploadedChecksum": "2018-02-16T14:37:58.584",
    "serviceApid": Array [
      2,
      4,
    ],
  },
}
`;

exports[`getPayload getPayload :: Pus144 pusService: test serviceApid:  should be undefined 1`] = `undefined`;

exports[`getPayload getPayload :: PusMme pusService: 0 serviceApid: 2 should be true 1`] = `undefined`;

exports[`getPayload getPayload :: PusMme pusService: 0 serviceApid: 2,4 should be true 1`] = `undefined`;

exports[`getPayload getPayload :: PusMme pusService: test serviceApid:  should be undefined 1`] = `undefined`;
